# AI-Trip-Planner

./: .env_example  .gitignore  README.md  app_streamlit.py  main.py  pyproject.toml  requirements.txt  setup.py
agent/: agentic_workflow.py
config/: config.yaml
output/: AI_Trip_Planner_2025-08-28_23-00-18.md  AI_Trip_Planner_2025-08-28_23-01-41.md  AI_Trip_Planner_2025-08-28_23-04-07.md
tools/: currency_conversion_tool.py  expense_calculator_tool.py  place_search_tool.py  weather_info_tool.py
utils/: config_loader.py  currency_convertor.py  model_loader.py  place_info_search.py  save_to_document.py  weather_info.py
